Separo lógica en distintos scripts

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 		</div>
 
 		<script src="js/angular.min.js"></script>
-		<script src="js/services.js"></script>
+		<script src="js/module.js"></script>
+		<script src="js/service.js"></script>
 		<script src="js/controller.js"></script>
 	</body>
 
