--- a/index.html
+++ b/index.html
@@ -11,22 +11,33 @@
 
 	<body ng-controller="controller">
 
-		<div class="square">
-			<h1 class="light">Generador De <font class="bold">TC</font></h1>
-		</div>
+		<div class="container">
 
-		<br/>
+			<div class="col-md-12">
+				<div class="col-md-4"></div>
 
-		<h2 class="main-font light">Generador de números de tarjeta de crédito</h2>
+				<div class="square col-md-4 content-col">
+					<h1 class="light">Generador De <font class="bold">TC</font></h1>
+				</div>
 
-		<form>
+				<div class="col-md-4"></div>
 
-			<div class="form-group form">
-				<label class="light" for="tcs">Seleccione un tipo de tarjeta</label>
+			</div>
 
-				<div clas="col-md-12">
-					<div class="col-md-4"></div>
-					<div class="col-md-4">
+			<br/>
+
+			<div class="col-md-12 top-space-sm">
+				<h2 class="main-font light">Generador de números de tarjeta de crédito</h2>
+			</div>	
+
+			<form class="col-md-12 top-space-sm">
+
+				<div class="col-md-4"></div>
+
+				<div class="col-md-4 content-col">
+
+					<div class="form-group form">
+						<label class="light" for="tcs">Seleccione un tipo de tarjeta</label>
 
 						<select id="cardTypeSelect" ng-model="codeCardTypeSelected" class="form-control select">
 							<option ng-repeat="cardType in cardTypes" value="{{cardType.CodeCardType}}">
@@ -35,41 +46,37 @@
 						</select>
 
 					</div>
-					<div class="col-md-4"></div>
-				</div>
 
-			</div>
+					<div class="form-group form top-space-md">
 
-			<br/>
-
-			<div class="form-group form">
-
-				<div clas="col-md-12">
-					<div class="col-md-4"></div>
-					<div class="col-md-4">
 						<button ng-click="generateCardNumber()" class="form-control btn btn-danger">
 							Generar
 						</button>
+
 					</div>
-					<div class="col-md-4"></div>
+
 				</div>
+			
+				<div class="col-md-4"></div>
 
-			</div>
-		
-		</form>
+			</form>
 
-		<br/>
-
-		<div id="result" class="form-group form">
-			<label class="light">Número de tarjeta generado</label>
 			<br/>
-			<label id="cardNumber" class="light">{{cardNumber}}</label>
+
+			<div id="result" class="form-group form">
+				<label class="light">Número de tarjeta generado</label>
+				<br/>
+				<label id="cardNumber" class="light">{{cardNumber}}</label>
+			</div>
+
+			<script src="js/angular.min.js"></script>
+			<script src="js/module.js"></script>
+			<script src="js/service.js"></script>
+			<script src="js/controller.js"></script>
+
 		</div>
 
-		<script src="js/angular.min.js"></script>
-		<script src="js/module.js"></script>
-		<script src="js/service.js"></script>
-		<script src="js/controller.js"></script>
 	</body>
+
 
 </html>
