Archivos minificados separados

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<title>Generador de números de TC</title>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="css/my-styles.css">
+		<link rel="stylesheet" type="text/css" href="css/my-styles.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
 	</head>
 
@@ -72,9 +72,9 @@
 			</div>
 
 			<script src="js/angular.min.js"></script>
-			<script src="js/module.js"></script>
-			<script src="js/service.js"></script>
-			<script src="js/controller.js"></script>
+			<script src="js/module.min.js"></script>
+			<script src="js/service.min.js"></script>
+			<script src="js/controller.min.js"></script>
 
 		</div>
 
