Oculto el label de numero de tarjeta generado hsata que efectivamente el numero este generado y abstraigo al servicio de la existencia del modelo. tambien se quitaron algunas clases css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="col-md-12">
 				<div class="col-md-4"></div>
 
-				<div class="square col-md-4 content-col">
+				<div class="square col-md-4">
 					<h1 class="light">
 						<span class="main-title">Generador</span><span class="text-xs">de</span><span class="bold">TC</span>
 					</h1>
@@ -65,10 +65,12 @@
 
 			<br/>
 
-			<div id="result" class="form-group form">
-				<label class="light">número de tarjeta generado</label>
-				<br/>
-				<label id="cardNumber" class="light">{{cardNumber}}</label>
+			<div class="col-md-12">
+				<div id="result" class="form-group form">
+					<label class="light">{{cardNumberDescription}}</label>
+					<br/>
+					<label id="cardNumber" class="light">{{cardNumber}}</label>
+				</div>
 			</div>
 
 			<script src="js/angular.min.js"></script>
