--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Generador de números de TC</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/my-styles.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
@@ -18,7 +19,8 @@
 
 				<div class="square col-md-4">
 					<h1 class="light">
-						<span class="main-title">Generador</span><span class="text-xs">de</span><span class="bold">TC</span>
+						<span class="main-title">Generador</span>
+						<span class="text-xs">de</span><span class="bold">TC</span>
 					</h1>
 				</div>
 
