--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
 
 			</div>
 
-			<br/>
-
 			<div class="col-md-12 top-space-sm">
 				<h2 class="main-font light">generador de números de tarjeta de crédito</h2>
 			</div>	
@@ -65,13 +63,10 @@
 
 			</form>
 
-			<br/>
-
 			<div class="col-md-12">
 				<div id="result" class="form-group form">
-					<label class="light">{{cardNumberDescription}}</label>
-					<br/>
-					<label id="cardNumber" class="light">{{cardNumber}}</label>
+					<label class="light col-md-12 col-xs-12 col-lg-12 col-sm-12">{{cardNumberDescription}}</label>
+					<label id="cardNumber" class="light col-md-12 col-xs-12 col-lg-12 col-sm-12">{{cardNumber}}</label>
 				</div>
 			</div>
 
