Cambio de labels por parrafors html

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
 			<div class="col-md-12">
 				<div id="result" class="form-group form">
-					<label class="light col-md-12 col-xs-12 col-lg-12 col-sm-12">{{cardNumberDescription}}</label>
-					<label id="cardNumber" class="light col-md-12 col-xs-12 col-lg-12 col-sm-12">{{cardNumber}}</label>
+					<p class="light reduced-bottom">{{cardNumberDescription}}</p>
+					<p id="cardNumber" class="light">{{cardNumber}}</p>
 				</div>
 			</div>
 
