--- a/index.html
+++ b/index.html
@@ -37,24 +37,33 @@
 
 				<div class="col-md-4"></div>
 
-				<div class="col-md-4 content-col">
+					<div class="col-md-4 content-col">
 
-					<div class="form-group form">
-						<label class="light" for="tcs">seleccione un tipo de tarjeta</label>
+						<div class="form-group form">
+							<label class="light" for="cardTypeSelect">seleccione un tipo de tarjeta</label>
 
-						<select id="cardTypeSelect" ng-model="codeCardTypeSelected" class="form-control select">
-							<option ng-repeat="cardType in cardTypes" value="{{cardType.CodeCardType}}">
-								{{cardType.CardTypeDescription}}
-							</option>
-						</select>
+							<select id="cardTypeSelect" ng-model="codeCardTypeSelected" class="form-control select">
+								<option ng-repeat="cardType in cardTypes" value="{{cardType.CodeCardType}}">
+									{{cardType.CardTypeDescription}}
+								</option>
+							</select>
 
-					</div>
+						</div>
 
-					<div class="form-group form top-space-md">
+		
+						<div class="form-group form">
+							<label class="light" for="customPrefix">prefijo personalizado</label>
+							<input id="customPrefix" type="number" ng-model="customPrefix" class="form-control input">
+						</div>
+			
 
-						<button ng-click="generateCardNumber()" class="form-control btn btn-danger">
-							Generar
-						</button>
+						<div class="form-group form top-space-md">
+
+							<button ng-click="generateCardNumber()" class="form-control btn btn-danger">
+								Generar
+							</button>
+
+						</div>
 
 					</div>
 
