Animacion CSS para la aparicion del numero generado

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div class="square col-md-4">
 					<h1 class="light">
 						<span class="main-title">Generador</span>
-						<span class="text-xs">de</span><span class="bold">TC</span>
+						<span class="text-xs">de</span><span class="bold"> TC</span>
 					</h1>
 				</div>
 
@@ -74,7 +74,7 @@
 			</form>
 
 			<div class="col-md-12">
-				<div id="result" class="form-group form" ng-class="{invisible: !cardNumberGenerated}">
+				<div id="result" class="form-group form" ng-class="{invisible: !cardNumberGenerated, visible: cardNumberGenerated}">
 					<p class="light reduced-bottom">{{cardNumberDescription}}</p>
 					<p id="cardNumber" class="light">{{cardNumber}}</p>
 				</div>
