menos margin-top al div resultado

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			</form>
 
 			<div class="col-md-12">
-				<div id="result" class="form-group form" ng-class="{invisible: !cardNumberGenerated, visible: cardNumberGenerated}">
+				<div id="result" class="form-group" ng-class="{invisible: !cardNumberGenerated, visible: cardNumberGenerated}">
 					<p class="light reduced-bottom">{{cardNumberDescription}}</p>
 					<p id="cardNumber" class="light">{{cardNumber}}</p>
 				</div>
