--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="images/favicon.png" />
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="css/my-styles.min.css">
+		<link rel="stylesheet" type="text/css" href="css/my-styles.css">
 		<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
 	</head>
 
@@ -40,15 +40,36 @@
 					<div class="col-md-4 content-col">
 
 						<div class="form-group form">
+
 							<label class="light" for="cardTypeSelect">seleccione un tipo de tarjeta</label>
 
-							<select id="cardTypeSelect" ng-model="codeCardTypeSelected" class="form-control select">
-								<option ng-repeat="cardType in cardTypes" value="{{cardType.CodeCardType}}">
-									{{cardType.CardTypeDescription}}
-								</option>
-							</select>
+							<div class="select-box" ng-class="{'box-shadow': showDropdownList}">
+
+								<span class="selected" value="{{codeCardTypeSelected}}" ng-click="showDropdownList=!showDropdownList">{{cardTypes[codeCardTypeSelected - 1].CardTypeDescription}}</span>
+
+								<ul class="select" ng-class="{invisible: !showDropdownList}">
+
+									<li ng-repeat="cardType in cardTypes" ng-class="{'option-selected': codeCardTypeSelected == cardType.CodeCardType}" value="{{cardType.CodeCardType}}" ng-click="selectCardType(cardType)">
+									
+										<div class="col-md-2 col-sm-2 col-xs-2 col-lg-2">
+											<picture>
+					                            <img class="card-icon" src="{{cardType.ImagePath}}" alt="{{cardType.CardTypeDescription}}">
+					                        </picture>
+                        				</div>
+										<div class="col-md-10 col-sm-10 col-xs-10 col-lg-10 card-description">
+											{{cardType.CardTypeDescription}}
+										</div>
+					
+									</li>
+
+								</ul>
+
+								<span ng-class="{'option-icon-up': showDropdownList, 'option-icon-down': !showDropdownList}" ng-click="showDropdownList=!showDropdownList"></span>
+
+							</div>
 
 						</div>
+
 
 		
 						<div class="form-group form">
@@ -82,11 +103,11 @@
 
 			<script src="js/angular.min.js"></script>
 			<script src="js/module.min.js"></script>
-			<script src="model/creditCardTypeModel.min.js"></script>
+			<script src="model/creditCardTypeModel.js"></script>
 			<script src="model/customPrefixModel.min.js"></script>
 			<script src="model/messagesModel.min.js"></script>
 			<script src="services/service.min.js"></script>
-			<script src="controllers/controller.min.js"></script>
+			<script src="controllers/controller.js"></script>
 
 		</div>
 
