--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="images/favicon.png" />
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="css/my-styles.css">
+		<link rel="stylesheet" type="text/css" href="css/my-styles.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
 	</head>
 
@@ -103,11 +103,11 @@
 
 			<script src="js/angular.min.js"></script>
 			<script src="js/module.min.js"></script>
-			<script src="model/creditCardTypeModel.js"></script>
+			<script src="model/creditCardTypeModel.min.js"></script>
 			<script src="model/customPrefixModel.min.js"></script>
 			<script src="model/messagesModel.min.js"></script>
 			<script src="services/service.min.js"></script>
-			<script src="controllers/controller.js"></script>
+			<script src="controllers/controller.min.js"></script>
 
 		</div>
 
