--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									
 										<div class="col-md-2 col-sm-2 col-xs-2 col-lg-2">
 											<picture>
-					                            <img class="card-icon" src="{{cardType.ImagePath}}" alt="{{cardType.CardTypeDescription}}">
+					                            <img class="card-icon" ng-class="{'card-icon-grayscale': codeCardTypeSelected != cardType.CodeCardType}" src="{{cardType.ImagePath}}" alt="{{cardType.CardTypeDescription}}">
 					                        </picture>
                         				</div>
 										<div class="col-md-10 col-sm-10 col-xs-10 col-lg-10 card-description">
