--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>Generador de números de TC</title>
+		<title>Generador de TC</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="images/favicon.png" />
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
